--- a/components/stateMachine/CMakeLists.txt
+++ b/components/stateMachine/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "src/stateMachineWifiCam.c"
                        INCLUDE_DIRS "include"
-                       REQUIRES esp_event nvs_flash wifi netif
+                       REQUIRES esp_event nvs_flash wifi netif communication
                        )
